<resources>
    <string name="app_name">Jamboree</string>
    <string name="loading">Loading…</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="event_name">Event name</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="price">Price</string>
    <string name="provider">Provider</string>
    <string name="events">Events</string>
    <string name="calendar">Calendar</string>
    <string name="my_events">My Events</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_need_to_log_in_order_to_see_this_resource">You need to log in order to see this resource.</string>
    <string name="logout">Logout</string>
    <string name="event_title">Event title</string>
    <string name="event">Event</string>
    <string name="description">Description</string>
    <string name="choose_an_event">Choose an event</string>
    <string name="favorite">Favorite</string>
    <string name="event_details">Event details</string>
</resources>
