<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/eventsFragment">

    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.example.jamboree.ui.events.EventsFragment"
        android:label="@string/events" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.jamboree.ui.calendar.CalendarFragment"
        android:label="@string/calendar" />

    <fragment
        android:id="@+id/userEventsFragment"
        android:name="com.example.jamboree.ui.user_events.UserEventsFragment"
        android:label="@string/my_events" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.jamboree.ui.auth.LoginFragment"
        android:label="@string/login" />
</navigation>
